--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^3.0.0",
     "astro": "^2.0.0",
-    "daisyui": "^2.27.0",
+    "daisyui": "^2.51.5",
     "dayjs": "^1.11.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7"
+    "@tailwindcss/typography": "^0.5.7",
+    "tailwindcss": "^3.3.1"
   }
 }
