--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: /src/
+          path: dist/
 
   deploy:
     needs: build
@@ -37,7 +37,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: github-pages
-          path: /src/
+          path: dist/
 
       - name: Deploy to GitHub Pages
         id: deployment
