--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,17 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       
-      - name: Install, build, and upload your site
-        uses: withastro/action@v0
+      - name: Force refresh of actions
+        run: rm -rf ~/.npm ~/.cache
+
+      - name: Install dependencies
+        run: npm ci  # Ensures a clean install
+
+      - name: Build the Astro site
+        run: npm run build  # This explicitly runs the build process
+
+      - name: Check if dist folder exists
+        run: ls -la dist || echo "⚠️ dist/ folder not found!"
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
@@ -38,6 +47,9 @@ jobs:
         with:
           name: github-pages
           path: dist/
+
+      - name: Check if dist folder exists after download
+        run: ls -la dist || echo "⚠️ dist/ folder not found after download!"
 
       - name: Deploy to GitHub Pages
         id: deployment
