--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,35 +21,28 @@ jobs:
         run: rm -rf ~/.npm ~/.cache
 
       - name: Install dependencies
-        run: npm ci  # Ensures a clean install
+        run: npm ci
 
       - name: Clean previous builds
         run: rm -rf dist && mkdir dist
 
       - name: Build the Astro site
-        run: npm run build  # Explicitly build the site
-
-      - name: Check if dist folder exists
-        run: ls -la dist || echo "⚠️ dist/ folder not found!"
+        run: npm run build
 
       - name: Check dist folder size
         run: du -sh dist || echo "⚠️ dist/ folder not found!"
 
-      - name: Check for symlinks in dist/
-        run: find dist/ -type l -exec ls -l {} \; || echo "✅ No symlinks found"
-
-      - name: Remove symlinks in dist/
+      - name: Check for symlinks and remove them
         run: find dist/ -type l -delete
+
+      - name: Check if dist contains invalid files
+        run: find dist/ -type f ! -name "*.html" ! -name "*.css" ! -name "*.js" ! -name "*.png" ! -name "*.jpg" ! -name "*.gif" ! -name "*.svg" -exec ls -l {} \; || echo "✅ All files are valid"
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: |
-            dist/**/*.html
-            dist/**/*.css
-            dist/**/*.js
-            dist/assets/
+          path: dist/
 
   deploy:
     needs: build
@@ -64,11 +57,8 @@ jobs:
           name: github-pages
           path: dist/
 
-      - name: Check dist folder size after download
-        run: du -sh dist || echo "⚠️ dist/ folder not found after download!"
-
-      - name: Check if dist folder exists after download
-        run: ls -la dist || echo "⚠️ dist/ folder not found after download!"
+      - name: Ensure correct permissions
+        run: chmod -R 755 dist/
 
       - name: Deploy to GitHub Pages
         id: deployment
