--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && find dist -type l -delete",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -25,3 +25,4 @@
     "tailwindcss": "^3.3.1"
   }
 }
+
