--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx astro build
 
       - name: Upload GitHub Pages Artifact
-        uses: actions/upload-pages-artifact@v4  
+        uses: actions/upload-pages-artifact@v1  # ✅ This replaces the deprecated v3
         with:
           path: dist  # Ensure this matches your Astro build output
 
@@ -38,4 +38,4 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v1
